# GNN_Project

./: README.md  X_test.pt  Y_test.pt  Y_train.pt  abc.py  experiments.ipynb  experiments.py  experiments2 .ipynb  experimentsBolztman.ipynb  experiments_mini.py  model.py  new_sim.ipynb  new_sim.py  pyABCTest.ipynb  pyABCTest.py  requirements.txt  simulation.py
data/: output.json  simulation_data.json  simulation_save.json
sbi_algorithms/: abc.py  pyABCTest.ipynb
sbi_algorithms_rust/abc/: Cargo.toml
sbi_algorithms_rust/abc/.cargo/: config.toml
sbi_algorithms_rust/abc/data/: accepted_simulation_data.json  original_simulation_data.json
sbi_algorithms_rust/abc/src/: main.rs  main_no_history.rs
simulations/: elastic_collisions.py  elastic_collisions_old.py  elastic_collisions_rust_connector.py
