[package]
name = "abc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
nalgebra = "0.32.4"
ndarray = "0.15.6"
rand = "0.9.0-alpha.0"
rand_distr = "0.4.3"
serde_json = "1.0.114"
